Fix table alignment.

--- a/app/assets/stylesheets/backend/udongo/tables.scss
+++ b/app/assets/stylesheets/backend/udongo/tables.scss
@@ -31,3 +31,6 @@ table {
   }
 }
 
+td {
+  vertical-align: top;
+}
